Fix various visual glitches, and put back some of the previous elements/styles. Tested on IE6, FF2, Opera9.
git-svn-id: https://svn.boostpro.com/clients/boostcon/site/code/trunk@1999 bbad15d5-7c10-0410-ba9e-f711d5c1d17a

--- a/media/style.css
+++ b/media/style.css
@@ -5,14 +5,11 @@
 #document img.align-right {
 	float: right;
 	margin: 10px 0px 10px 10px;
-	padding: 5px;
-	border: 1px solid #86aac5;
 }
 
 #document img.align-left {
 	float: left;
 	margin: 0px 10px 10px 22px;
-	border: 1px solid #86aac5;
 }
 
 #document div.figure-right { float: right; clear: right; }
@@ -189,9 +186,9 @@ div#sidebar {
 	width: 250px;
 	float: left;
 	background-color: #FFFFFF;
-	background-image: url(images/sessions-background.gif);
+	/* background-image: url(images/sessions-background.gif);
 	background-repeat: no-repeat;
-	background-position: top;
+	background-position: top; */
 }
 
 div#sidebar h3 {
@@ -234,7 +231,7 @@ div#sidebar ul a:hover {
 div.wrapper {
 	background-image: url(images/block-wrapper.gif);
 	height: 33px;
-	width: 212px; /* 156px */
+	width: 215px; /* 156px */
 	margin: 0 auto;
 }
 
@@ -265,7 +262,7 @@ div#sidebar div.block {
 	background-repeat: repeat-x;
 	background-position: top;
 	*/
-	width: 182px; /* 129px */
+	width: 187px; /* 129px */
 	margin: 0 auto;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 1.1em;
@@ -383,7 +380,8 @@ div#main {
 	/* width: 700px; */
 	/* float: right; */
 	/* float: left; */
-	margin: 18px 25px 0px 268px;
+	margin: 0px 0px 0px 255px;
+  padding: 18px 0px 0px 0px;
 	background-color: #FFFFFF;
 }
 
@@ -392,7 +390,7 @@ div.node {
 	font-size: 1.2em;
 	font-weight: normal;
 	/* width: 650px; */
-	margin: 0 17px 17px 0;
+	margin: 0 22px 22px 0 !important;
 	background-color: #FFFFFF;
 	/* position: relative; */
 }
@@ -535,9 +533,9 @@ table.schedule
 	font-size: 1em;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	line-height:1.2em;
-	width:100%;
+	width:95%;
 	border-collapse: collapse;
-	margin: 6px 0 14px 22px;
+	margin: 6px 0px 14px 22px;
 }
 
 
